src/PclSharp.Extern/common/PCAOfXYZ.generated.h

// Code generated by a template
#pragma once
#include "..\export.h"

#include <pcl/point_types.h>
#include <pcl/common/pca.h>

using namespace pcl;
using namespace std;

typedef boost::shared_ptr<PointCloud<PointXYZ>> boost_cloud;
typedef boost::shared_ptr<vector<int>> boost_indices;

#ifdef __cplusplus
extern "C" {
#endif 

EXPORT(PCA<PointXYZ>*) pca_xyz_ctor(int basisOnly)
{ return new PCA<PointXYZ>(basisOnly); }

EXPORT(void) pca_xyz_delete(PCA<PointXYZ>** ptr)
{
	delete *ptr;
	*ptr = NULL;
}

EXPORT(void) pca_xyz_setInputCloud(PCA<PointXYZ>* ptr, PointCloud<PointXYZ>* cloud)
{ ptr->setInputCloud(boost_cloud(boost_cloud(), cloud)); }

EXPORT(void) pca_xyz_setIndices(PCA<PointXYZ>* ptr, std::vector<int>* indices)
{ ptr->setIndices(boost_indices(boost_indices(), indices)); }

EXPORT(void) pca_xyz_update(PCA<PointXYZ>* ptr, PointXYZ* input, PCA<PointXYZ>::FLAG flag)
{ ptr->update(*input, flag); }

EXPORT(Eigen::Vector4f) pca_xyz_getMean(PCA<PointXYZ>* ptr)
{ return ptr->getMean(); }

EXPORT(Eigen::Vector3f) pca_xyz_getEigenValues(PCA<PointXYZ>* ptr)
{ return ptr->getEigenValues(); }

#ifdef __cplusplus  
}
#endif  