src/PclSharp/Common/PCAOfXYZ.generated.cs

// Code generated by a template
using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using PclSharp.Struct;
using PclSharp.Std;
using System.Numerics;

namespace PclSharp.Common
{
	public static partial class Invoke
	{
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr pca_xyz_ctor(bool basisOnly);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void pca_xyz_delete(ref IntPtr ptr);

		//methods
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void pca_xyz_setInputCloud(IntPtr ptr, IntPtr cloud);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void pca_xyz_setIndices(IntPtr ptr, IntPtr indices);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern unsafe void pca_xyz_update(IntPtr ptr, PointXYZ* input, PCA.Flag flag);

		//properties
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern Vector4 pca_xyz_getMean(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern Vector3 pca_xyz_getEigenValues(IntPtr ptr);
	}

	public class PCAOfXYZ : PCA<PointXYZ>
	{
		public override Vector4 Mean
			=> Invoke.pca_xyz_getMean(_ptr);

		public override Vector3 EigenValues
			=> Invoke.pca_xyz_getEigenValues(_ptr);
		
		public PCAOfXYZ(bool basisOnly = false)
		{
			_ptr = Invoke.pca_xyz_ctor(basisOnly);
		}

		public override void SetInputCloud(PointCloud<PointXYZ> cloud)
			=> Invoke.pca_xyz_setInputCloud(_ptr, cloud);

		public override void SetIndices(VectorOfInt indices)
			=> Invoke.pca_xyz_setIndices(_ptr, indices);

		public override unsafe void Update(PointXYZ input, PCA.Flag flag = PCA.Flag.Preserve)
			=> Invoke.pca_xyz_update(_ptr, &input, flag);

		public override ref PointXYZ this[int idx]
		{
			get { return ref this.Index(idx); }
		}

		protected override void DisposeObject()
		{
			Invoke.pca_xyz_delete(ref _ptr);
		}
	}
}
